# pyannotate

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  PUBLISHING.md  README.md  TESTING.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.bat  run_tests.sh  setup.py
.github/workflows/: publish.yml  python-package.yml  workflow.yml
examples/: .annot8.yaml.example  .pyannotate.json.example  .pyannotate.yaml.example
src/annot8/: __init__.py  annotate_headers.py  backup.py  cli.py  config.py  git_integration.py
src/pyannotate/: __init__.py  annotate_headers.py  backup.py  cli.py  config.py  git_integration.py
tests/: __init__.py  create_web_test_files.py  run_css_header_check_root.py  run_tests.py  test_additional_languages.py  test_annotate_headers.py  test_cli.py  test_config.py  test_config_integration.py  test_enhanced_headers.py  test_git_integration.py  test_ignored_files.py  test_newline_handling.py  test_revert.py  test_template_merging.py  test_templates.py  test_utils.py  test_web_frameworks.py
tests/helpers/: components.py
tests/sample_files/: globals.css
tests/sample_web_files/astro/: Component.astro
tests/sample_web_files/ejs/: Template.ejs
tests/sample_web_files/handlebars/: Component.hbs  Template.handlebars
tests/sample_web_files/html/: index.html
tests/sample_web_files/jinja2/: Component.jinja2
tests/sample_web_files/legacy/: legacy-component.js  styles.css
tests/sample_web_files/mdx/: Article.mdx
tests/sample_web_files/mustache/: Component.mst  Template.mustache
tests/sample_web_files/pug/: Template.jade
tests/sample_web_files/react/: Counter.jsx
tests/sample_web_files/svelte/: Component.svelte
tests/sample_web_files/twig/: Template.twig
tests/sample_web_files/vue/: Component.vue  SetupComponent.vue
