# File: pyproject.toml

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyannotate"
version = "0.9.0"
description = "Python package to annotate files with headers."
authors = [
    {name = "soulwax", email = "soulwax@nandcore.com"},
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
keywords = ["file", "header", "annotation", "comment", "automation"]

[project.urls]
Homepage = "https://github.com/soulwax/pyannotate"
Repository = "https://github.com/soulwax/pyannotate"
Issues = "https://github.com/soulwax/pyannotate/issues"

[project.scripts]
pyannotate = "pyannotate.cli:main"

[tool.setuptools_scm]
write_to = "src/pyannotate/_version.py"

[tool.black]
line-length = 100
target-version = [
    'py38',
    'py39',
    'py310',
    'py311',
    'py312',
    'py313',
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.main]
ignore-patterns = ["^\\.#", "_version.py$"]

[tool.pylint.messages_control]
disable = [
    "C0111", # Missing docstring
    "R0913", # Too many arguments
    "R0914", # Too many local variables
    "C0103", # Invalid name
    "C0209", # Consider using f-string
    "R0911", # Too many return statements
    "R0912", # Too many branches
    "R1702", # Too many nested blocks
    "W0612", # Unused variable
    "W0705", # Catching previously caught exception type
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "fp", "id"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=pyannotate"
pythonpath = [".", "src"]
